data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1990.wast
;; 1. **Test: Calling an Exported Function with `br_if` in a Conditional Block**    - **Constraint Checked:** Ensure that `br_if` correctly transitions control to an exported function within a block, respecting the operand stack.    - **Description:** Export a function with conditional logic using `br_if`. Call this function from another module and verify that control transfers back to the caller module correctly after executing the branch in the callee module's block.

(assert_invalid
  (module
    (func $exported
      (export "test_func")
      (block (if (i32.const 1) (then (br_if 0 (i32.const 1)))))
    )
    (func (call $exported))
  )
  "type mismatch"
)